tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax04/Test.java


public class Test {

	public int _(int a) {
		return a + 4;
	}
	
	public static void main(String[] args) {
		
    }
	
	
}